<resources>
    <string name="app_name">SuitmediaInternTest</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="palindrome">Palindrome</string>
    <string name="check">CHECK</string>
    <string name="next">NEXT</string>
    <string name="second_screen">Second Screen</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user_name">Selected User Name</string>
    <string name="choose_a_user">Choose a User</string>
    <string name="third_screen">Third Screen</string>
    <string name="email">email@email.com</string>
    <string name="first_name_last_name">First Name Last Name</string>
</resources>