<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.SecondActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_second_screen"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/bottom_border"
        app:navigationIcon="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_second_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/second_screen"
            android:textColor="@color/teal"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/layout_second_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_second_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:fontFamily="@font/poppins_regular"
            android:textSize="14sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/poppins_bold"
            android:textSize="20sp"
            android:textStyle="bold"/>

    </LinearLayout>

    <TextView
        android:id="@+id/selected_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selected_user_name"
        android:fontFamily="@font/poppins_bold"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/button_choose_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_second_1" />

    <Button
        android:id="@+id/button_choose_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/choose_a_user"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>