<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image_background"
    android:fitsSystemWindows="true"
    tools:context=".ui.MainActivity">

    <LinearLayout
        android:id="@+id/layout_first_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/iv_add_photo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/ic_add_photo"
            android:contentDescription="@string/add_photo" />

        <LinearLayout
            android:id="@+id/layout_first_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:hint="@string/name">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLength="255"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_palindrome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                android:hint="@string/palindrome">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_palindrome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_regular"
                    android:maxLength="255"
                    android:maxLines="1"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_first_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button_check"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/teal"
                android:text="@string/check"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:targetApi="lollipop" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/teal"
                android:text="@string/next"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_regular"
                tools:targetApi="lollipop" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>